--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,19 @@ chardet==3.0.4
 cryptography==2.7
 cycler==0.10.0
 decorator==4.4.0
+fpdf==1.7.2
 future==0.17.1
 idna==2.8
 imageio==2.5.0
+img2pdf==0.3.3
 imutils==0.5.3
 kiwisolver==1.1.0
 matplotlib==3.1.1
 networkx==2.3
 numpy==1.17.2
-opencv-python==4.1.1.26
+opencv-python==3.4.7.28
 Pillow==6.1.0
+pkg-resources==0.0.0
 pycparser==2.19
 pyparsing==2.4.2
 python-dateutil==2.8.0
